--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,10 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
+    <dimen name="act_horizontal_margin">8dp</dimen>
+    <dimen name="act_vertical_margin">4dp</dimen>
+
+    <dimen name="corner_radius">4dp</dimen>
+    <dimen name="text_padding">8dp</dimen>
 </resources>
