--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,8 +1,9 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
+    <style name="WTGF.ActionBar" parent="@style/ThemeOverlay.AppCompat.Dark">
+        <item name="android:background" tools:ignore="NewApi">@color/primary</item>
+        <item name="background">@color/primary</item>
     </style>
 
 </resources>
