--- a/app/src/main/res/drawable-v21/drawable_white_background_with_corners.xml
+++ b/app/src/main/res/drawable-v21/drawable_white_background_with_corners.xml
@@ -1,16 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_pressed="true">
-        <shape android:shape="rectangle">
-            <corners android:radius="@dimen/corner_radius" />
-            <solid android:color="@color/highlighted_text_material_light" />
-        </shape>
-    </item>
-    <item>
+<ripple xmlns:android="http://schemas.android.com/apk/res/android"
+    android:color="?android:attr/colorControlHighlight">
+    <item
+        android:id="@android:id/mask"
+        android:drawable="@android:color/white">
         <shape android:shape="rectangle">
             <corners android:radius="@dimen/corner_radius" />
             <solid android:color="@color/background" />
         </shape>
     </item>
-</selector>
+    <item android:state_pressed="true">
+        <shape android:shape="rectangle">
+            <corners android:radius="@dimen/corner_radius" />
+            <solid android:color="@color/background" />
+        </shape>
+    </item>
+</ripple>
