--- a/app/src/main/res/layout/recycler_view_item_category.xml
+++ b/app/src/main/res/layout/recycler_view_item_category.xml
@@ -1,32 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:id="@+id/act_category_ll_item"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="@dimen/act_vertical_margin"
-    android:layout_marginLeft="@dimen/act_horizontal_margin"
-    android:layout_marginRight="@dimen/act_horizontal_margin"
-    android:layout_marginTop="@dimen/act_vertical_margin"
-    android:background="@drawable/drawable_white_background_with_corners"
-    android:orientation="vertical">
+    android:clipToPadding="false"
+    android:paddingBottom="@dimen/act_vertical_margin"
+    android:paddingLeft="@dimen/act_horizontal_margin"
+    android:paddingRight="@dimen/act_horizontal_margin"
+    android:paddingTop="@dimen/act_vertical_margin">
 
-    <TextView
-        android:id="@+id/act_category_tv_item_name"
+    <LinearLayout
+        android:id="@+id/act_category_ll_item"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="@dimen/text_padding"
-        android:text="Name"
-        android:textStyle="bold" />
+        android:background="@drawable/drawable_white_background_with_corners"
+        android:orientation="vertical">
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/divider" />
+        <TextView
+            android:id="@+id/act_category_tv_item_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="@dimen/text_padding"
+            android:text="Name"
+            android:textColor="@color/accent"
+            android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/act_category_tv_item_desc"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="@dimen/text_padding"
-        android:text="Description" />
-</LinearLayout>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/divider" />
+
+        <TextView
+            android:id="@+id/act_category_tv_item_desc"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="@dimen/text_padding"
+            android:text="Description"
+            android:textColor="@color/secondary_text" />
+    </LinearLayout>
+</FrameLayout>
