--- a/app/src/main/res/layout/recycler_view_item_category.xml
+++ b/app/src/main/res/layout/recycler_view_item_category.xml
@@ -17,6 +17,7 @@
         android:orientation="vertical">
 
         <TextView
+            android:textSize="@dimen/abc_text_size_large_material"
             android:id="@+id/act_category_tv_item_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
