--- a/app/src/main/res/layout/recycler_view_item_category.xml
+++ b/app/src/main/res/layout/recycler_view_item_category.xml
@@ -16,15 +16,37 @@
         android:background="@drawable/drawable_white_background_with_corners"
         android:orientation="vertical">
 
-        <TextView
-            android:textSize="@dimen/abc_text_size_large_material"
-            android:id="@+id/act_category_tv_item_name"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="@dimen/text_padding"
-            android:text="Name"
-            android:textColor="@color/accent"
-            android:textStyle="bold" />
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/act_category_tv_item_name"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:padding="@dimen/text_padding"
+                android:text="Name"
+                android:textColor="@color/accent"
+                android:textSize="@dimen/abc_text_size_large_material"
+                android:textStyle="bold" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:paddingRight="@dimen/text_padding_small"
+                android:text="@string/act_category_tv_workout_count" />
+
+            <TextView
+                android:id="@+id/act_category_tv_workout_count"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:paddingRight="@dimen/text_padding"
+                android:text="9" />
+        </LinearLayout>
 
         <View
             android:layout_width="match_parent"
