--- a/app/src/main/res/layout/detail_activity.xml
+++ b/app/src/main/res/layout/detail_activity.xml
@@ -28,50 +28,51 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="@dimen/text_padding"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
-        android:background="@drawable/detail_desc_background">
+        android:background="@drawable/detail_desc_background"
+        android:orientation="vertical"
+        android:padding="@dimen/text_padding">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#3C6E71"
-        android:padding="@dimen/text_padding"
-        android:text="@string/txt_description_label"
-        android:gravity="center_horizontal"
-        android:textColor="#FFFFFF" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:padding="@dimen/text_padding"
+            android:text="@string/txt_description_label"
+            android:textColor="@color/primary_text" />
 
-    <TextView
-        android:id="@+id/txt_desc"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="@dimen/text_padding"
-        android:text="N/A" />
+        <TextView
+            android:id="@+id/txt_desc"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="@dimen/text_padding"
+            android:text="N/A" />
 
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#3C6E71"
-        android:padding="@dimen/text_padding"
-        android:gravity="center_horizontal"
-        android:text="@string/txt_calories_label"
-        android:textColor="#FFFFFF" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:padding="@dimen/text_padding"
+            android:text="@string/txt_calories_label"
+            android:textColor="@color/primary_text" />
 
-    <TextView
-        android:id="@+id/txt_calories"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="@dimen/text_padding"
-        android:text="N/A" />
+        <TextView
+            android:id="@+id/txt_calories"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="@dimen/text_padding"
+            android:text="N/A" />
 
-        </LinearLayout>
+    </LinearLayout>
 
     <!--<com.akexorcist.roundcornerprogressbar.RoundCornerProgressBar
         android:id="@+id/progress_1"
         android:layout_width="match_parent"
-        android:layout_height="40dp" />-->
+        android:layout_height="40dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginTop="5dp" />-->
 
 </LinearLayout>
