--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,6 +3,7 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
 
+    <dimen name="act_padding">8dp</dimen>
     <dimen name="act_horizontal_margin">8dp</dimen>
     <dimen name="act_vertical_margin">6dp</dimen>
     <dimen name="image_padding">8dp</dimen>
@@ -15,4 +16,6 @@
 
     <dimen name="act_workout_riv_thumb_size">100dp</dimen>
     <dimen name="act_workout_tv_prompt_width">64dp</dimen>
+
+    <dimen name="act_tracker_bc_height">250dp</dimen>
 </resources>
