--- a/app/src/main/res/layout/detail_activity.xml
+++ b/app/src/main/res/layout/detail_activity.xml
@@ -28,6 +28,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="5dp"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
         android:background="@drawable/detail_desc_background"
@@ -42,12 +43,28 @@
             android:text="@string/txt_description_label"
             android:textColor="@color/primary_text" />
 
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/divider" />
+
         <TextView
             android:id="@+id/txt_desc"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="@dimen/text_padding"
             android:text="N/A" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:background="@drawable/detail_desc_background"
+        android:orientation="vertical"
+        android:padding="@dimen/text_padding">
 
 
         <TextView
@@ -58,6 +75,11 @@
             android:text="@string/txt_calories_label"
             android:textColor="@color/primary_text" />
 
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/divider" />
+
         <TextView
             android:id="@+id/txt_calories"
             android:layout_width="wrap_content"
@@ -67,12 +89,12 @@
 
     </LinearLayout>
 
-    <!--<com.akexorcist.roundcornerprogressbar.RoundCornerProgressBar
+    <com.akexorcist.roundcornerprogressbar.RoundCornerProgressBar
         android:id="@+id/progress_1"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
-        android:layout_marginTop="5dp" />-->
+        android:layout_marginTop="5dp" />
 
 </LinearLayout>
