--- a/app/src/main/res/drawable/detail_desc_background.xml
+++ b/app/src/main/res/drawable/detail_desc_background.xml
@@ -16,7 +16,7 @@
         android:left="0dp"
         android:right="0dp">
         <shape android:shape="rectangle">
-            <solid android:color="#CBDF90" />
+            <solid android:color="@color/primary_light" />
             <corners android:radius="5dp" />
 
         </shape>
