--- a/app/src/main/res/layout/detail_activity.xml
+++ b/app/src/main/res/layout/detail_activity.xml
@@ -131,7 +131,8 @@
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:background="@drawable/detail_desc_background"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:padding="@dimen/text_padding">
 
                 <TextView
                     android:layout_width="match_parent"
