--- a/app/src/main/res/drawable/btn_start_tracker_press.xml
+++ b/app/src/main/res/drawable/btn_start_tracker_press.xml
@@ -1,18 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item>
-        <shape android:shape="oval">
-            <solid android:color="#570000"/>
-        </shape>
-    </item>
-
     <item
         android:bottom="5dp"
         android:left="0dp"
         android:right="0dp"
         android:top="0dp">
         <shape android:shape="oval">
-            <solid android:color="#F1906F"/>
+            <solid android:color="@color/accent_dark"/>
         </shape>
     </item>
 </layer-list>
